fix: adjust `h1`/`h2` size on small screens

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -689,13 +689,13 @@ a.zola-anchor {
   }
   .inner-post {
     h1 {
-      font-size: 35px;
-      line-height: 39px;
+      font-size: 32px;
+      line-height: 36px;
     }
     h2 {
-      font-size: 30px;
-      line-height: 34px;
-      margin-bottom: 15px;
+      font-size: 26px;
+      line-height: 30px;
+      margin-bottom: 14px;
     }
     p,
     li {
